Updates from Overleaf

--- a/chap6-valor_analysis_2.tex
+++ b/chap6-valor_analysis_2.tex
@@ -430,7 +430,7 @@ The top left plot of Figure~\ref{fig:Nue_app_spectra_ratios} shows the \nue appe
     \includegraphics[width = 0.49\textwidth]{figures-chap6/spectra/nue_app_spectra_ratio_sbnd.pdf}
     \includegraphics[width = 0.49\textwidth]{figures-chap6/spectra/nue_app_spectra_ratio_uboone.pdf}
     \includegraphics[width = 0.49\textwidth]{figures-chap6/spectra/nue_app_spectra_ratio_icarus.pdf}
-    \caption[Ratio of \nue appearance spectra with the oscillation parameters shown on the statistical only contour.]{\nue appearance stat-only exclusion contour and allowed region. The injected point at $\sin^2{2\theta_{\mu e}} = 0.003$, $\Delta m^2_{41}$ = 1.32 eV$^2$ used for the allowed region is shown along with two further points at $\sin^2{2\theta_{\mu e}} = 0.0014$, $\Delta m^2_{41}$ = 1 eV$^2$ and   $\sin^2{2\theta_{\mu e}} = 0.0005$, $\Delta m^2_{41}$ = 100 eV$^2$ (top left). The ratio of spectra with oscillation parameters corresponding to the three points mentioned versus nominal are shown for \gls{sbnd} (top right), \gls{microboone} (bottom left) and \gls{icraus} (bottom right).}
+    \caption[Ratio of \nue appearance spectra with the oscillation parameters shown on the statistical only contour.]{\nue appearance stat-only exclusion contour and allowed region. The injected point at $\sin^2{2\theta_{\mu e}} = 0.003$, $\Delta m^2_{41}$ = 1.32 eV$^2$ used for the allowed region is shown along with two further points at $\sin^2{2\theta_{\mu e}} = 0.0014$, $\Delta m^2_{41}$ = 1 eV$^2$ and   $\sin^2{2\theta_{\mu e}} = 0.0005$, $\Delta m^2_{41}$ = 100 eV$^2$ (top left). The ratio of spectra with oscillation parameters corresponding to the three points mentioned versus nominal are shown for \gls{sbnd} (top right), \gls{microboone} (bottom left) and \gls{icarus} (bottom right).}
     \label{fig:Nue_app_spectra_ratios}
 \end{figure}
 
@@ -459,7 +459,7 @@ The top left plot of Figure~\ref{fig:nue_disapp_spectra_ratios} shows the \nue d
     \includegraphics[width = 0.49\textwidth]{figures-chap6/spectra/nue_disapp_spectra_ratio_sbnd.pdf}
     \includegraphics[width = 0.49\textwidth]{figures-chap6/spectra/nue_disapp_spectra_ratio_uboone.pdf}
     \includegraphics[width = 0.49\textwidth]{figures-chap6/spectra/nue_disapp_spectra_ratio_icarus.pdf}
-    \caption[Ratio of \nue disappearance spectra with the oscillation parameters shown on the statistical only contour.]{\nue disappearance stat-only exclusion contour and allowed region. The injected point at $\sin^2{2\theta_{ee}} = 0.4$, $\Delta m^2_{41}$ = 3 eV$^2$ used for the allowed region is shown along with two further points at $\sin^2{2\theta_{ee}} = 0.29$, $\Delta m^2_{41}$ = 1 eV$^2$ and \mbox{$\sin^2{2\theta_{ee}} = 0.085$}, \mbox{$\Delta m^2_{41}$ = 100 eV$^2$} (top left). The ratio of spectra with oscillation parameters corresponding to the three points mentioned versus nominal are shown for \gls{sbnd} (top right), \gls{microboone} (bottom left) and \gls{icraus} (bottom right).}
+    \caption[Ratio of \nue disappearance spectra with the oscillation parameters shown on the statistical only contour.]{\nue disappearance stat-only exclusion contour and allowed region. The injected point at $\sin^2{2\theta_{ee}} = 0.4$, $\Delta m^2_{41}$ = 3 eV$^2$ used for the allowed region is shown along with two further points at $\sin^2{2\theta_{ee}} = 0.29$, $\Delta m^2_{41}$ = 1 eV$^2$ and \mbox{$\sin^2{2\theta_{ee}} = 0.085$}, \mbox{$\Delta m^2_{41}$ = 100 eV$^2$} (top left). The ratio of spectra with oscillation parameters corresponding to the three points mentioned versus nominal are shown for \gls{sbnd} (top right), \gls{microboone} (bottom left) and \gls{icarus} (bottom right).}
     \label{fig:nue_disapp_spectra_ratios}
 \end{figure}
 
