Updates from Overleaf

--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -16,6 +16,10 @@ Thesis submitted in accordance with the requirements of the University of Liverp
 \setabstractextramargins{0cm}
 \input{abstract}
 
+%% Add Glossary
+\glsaddall 
+\glsunsetall
+
 %% Declaration
 \setdeclarationextramargins{0cm}
 \input{declaration}
@@ -47,8 +51,7 @@ Thesis submitted in accordance with the requirements of the University of Liverp
 %% I don't want a page number on the following blank page either.
 \thispagestyle{empty}
 
-%% Add Glossary
-\glsaddall 
+
 \printglossaries
 
 % Have the short form for glossary entries in the list of tables and figures
