--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -40,7 +40,11 @@ Thesis submitted in accordance with the requirements of the University of Liverp
 %\end{preface}
 
 %% ToC
+% set sectioning levels - 3 = subsubsection
+\setcounter{tocdepth}{3}
+\setcounter{secnumdepth}{3}
 \tableofcontents
+
 
 
 %% Strictly optional!
