--- a/glossary.tex
+++ b/glossary.tex
@@ -11,9 +11,13 @@
 \newacronym{bsm}{BSM}{Beyond Standard Model}
 \newacronym{cc}{CC}{Charged Current}
 \newacronym{ccqe}{CC QE}{Charged Current Quasi Elastic}
+\newacronym{ckm}{CKM matrix}{Cabibbo–Kobayashi–Maskawa matrix}
+\newacronym{cnn}{CNN}{Convolutional Neural Network}
 \newacronym{cp}{CP}{charge-parity}
 \newacronym{cpa}{CPA}{Cathode Plane Assembly}
 \newacronym{crt}{CRT}{Cosmic Ray Tagger}
+\newacronym{dar}{DAR}{decay at rest}
+\newacronym{dif}{DIF}{decay in flight}
 \newacronym{dis}{DIS}{Deep Inelastic Scattering}
 \newacronym{donut}{DONUT}{Direct Observation of the Nu Tau}
 \newacronym{dune}{DUNE}{Deep Underground Neutrino Experiment}
@@ -26,6 +30,7 @@
 \newacronym{genie}{GENIE}{Generates Events for Neutrino Interaction Experiments}
 \newacronym{icarus}{ICARUS}{Imaging Cosmic and Rare Underground Signals}
 \newacronym{karmen}{KARMEN}{Karlsruhe Rutherford Medium Energy Neutrino}
+\newacronym{katrin}{KATRIN}{Karlsruhe Tritium Neutrino Experiment}
 \newacronym{larsoft}{LArSoft}{Liquid Argon Software}
 \newacronym{lar}{LAr}{Liquid Argon}
 \newacronym{lartpc}{LArTPC}{Liquid Argon Time Projection Chamber}
@@ -41,12 +46,14 @@
 \newacronym{msw}{MSW}{Mikheyev–Smirnov–Wolfenstein}
 \newacronym{nc}{NC}{Neutral Current}
 \newacronym{nist}{NIST}{National Institute of Standards and Technology}
+\newacronym{numi}{NuMI}{Neutrinos at the Main Injector}
 \newacronym{p}{P}{parity}
 \newacronym{pdg}{PDG}{Particle Data Group}
 \newacronym{pds}{PDS}{Photon Detection System}
 \newacronym{pmns}{PMNS}{Pontecorvo-Maki-Nakagawa-Sakata}
 \newacronym{pmt}{PMT}{Photo Multiplier Tube}
 \newacronym{pot}{POT}{Protons-On-Target}
+\newacronym{reno}{RENO}{Reactor Experiment for Neutrino Oscillation}
 \newacronym{sage}{SAGE}{Soviet-American Gallium Experiment}
 \newacronym{sbn}{SBN}{Short Baseline Neutrino}
 \newacronym{sbnd}{SBND}{Short Baseline Near Detector}
@@ -57,6 +64,7 @@
 \newacronym{sm}{SM}{Standard Model}
 \newacronym{sno}{SNO}{Sudbury Neutrino Observatory}
 \newacronym{sp}{SP}{Space Point}
+\newacronym{stereo}{STEREO}{Sterile Reactor Neutrino Oscillations}
 %\newacronym{tla}{TLA}{Three Letter Acronym}
 \newacronym{tpb}{TPB}{Tetraphenyl Butadiene}
 \newacronym{tpc}{TPC}{Time Projection Chamber}
