--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 \makeatletter
 \@ifpackageloaded{hyperref}{%
 \hypersetup{%
-  pdftitle = {Search for Sterile Neutrinos at the SBN program},
+  pdftitle = {New Physics Searches with Single Electromagnetic Shower Events at the Fermilab Short Baseline Neutrino Program},
   pdfsubject = {PhD thesis},
   pdfkeywords = {LHCb, B, physics, LHC, heavy flavour},
   pdfauthor = {\textcopyright\ Thomas Ham}
