--- a/Likely_Examiner_Questions.tex
+++ b/Likely_Examiner_Questions.tex
@@ -8,6 +8,9 @@ After having read parts of the thesis, these are some of the questions people th
     \item Background/Theory
     \begin{itemize}
         \item Brief description / be able to sketch the historically significant neutrino experiments.
+        \item Benefits of on-axis vs off-axis detectors. 
+        \item Exclusion contour vs exclusion sensitivity contour? STEREO plot.
+        \item Wilks' theorem - what is it? And why does it apply/maybe not apply to neutrino experiments.
     \end{itemize}
     
     \item SBN Programme
