Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,7 @@
 
 
 %% Define the thesis title and author
-\title{Search for Sterile Neutrinos at the Short Baseline Neutrino Program}
+\title{New Physics Searches with Single Electromagnetic Shower Events at the Fermilab Short Baseline Neutrino Program}
 \author{Thomas Ham}
 
 %% Doc-specific PDF metadata
