Updates from Overleaf

--- a/liverpool_title_page.tex
+++ b/liverpool_title_page.tex
@@ -4,10 +4,10 @@
 \begin{center}
 	\begin{minipage}{1\linewidth}
 		\centering
-		\vspace{2cm}		
+		\vspace{0.5cm}		
 		%Thesis title
-		{\Huge \textbf{Search for Sterile Neutrinos at the Short Baseline Neutrino Program}\par}
-		\vspace{2.5cm}
+		{\Huge \textbf{New Physics Searches with Single Electromagnetic Shower Events at the Fermilab Short Baseline Neutrino Program}\par}
+		\vspace{1.5cm}
 		%University logo
 		\includegraphics[width=0.5\smallfigwidth]{figures-coat_of_arms/Arms_of_the_University_of_Liverpool.pdf} \par
 		\vspace{2cm}
