--- a/main.tex
+++ b/main.tex
@@ -27,8 +27,9 @@
 
 
 %% Define the thesis title and author
-\title{New Physics Searches with Single Electromagnetic Shower Events at the Fermilab Short Baseline Neutrino Program}
-\author{Thomas Ham}
+% Now defined on the Liverpool title page
+%\title{New Physics Searches with Single Electromagnetic Shower Events at the Fermilab Short Baseline Neutrino Program}
+%\author{Thomas Ham}
 
 %% Doc-specific PDF metadata
 \makeatletter
